--- a/private/skins/biscuit/templates/read_journal.twig
+++ b/private/skins/biscuit/templates/read_journal.twig
@@ -8,7 +8,7 @@
 {% set opengraph_published = data.published | date("c") %}
 {% set opengraph_author = domain ~ "user/" ~ data.author.info.username %}
 {% set metadata_author = data.author.info.username %}
-{% set opengraph_section = "squareBracket journal" %}
+{% set opengraph_section = "squareBracket post" %}
 
 {% block scripts %}
 	{{ include('submission_rating_script.twig') }}
