--- a/scss/biscuit/default/_content_box.scss
+++ b/scss/biscuit/default/_content_box.scss
@@ -36,7 +36,10 @@
     padding: $context-box-padding;
     overflow: hidden;
     word-break: break-word;
-    border-radius: 4px;
+
+    &.no-border-top {
+        border-top: none;
+    }
 
     &.content-box-profile-submissions
     {
