--- a/private/skins/biscuit/templates/components/_comment.twig
+++ b/private/skins/biscuit/templates/components/_comment.twig
@@ -5,17 +5,19 @@
             {{ user_link(comment.author) }} • <small title="{{ comment.posted | date('F j, Y') }}">{{ comment.posted | relative_time }}</small>
         </div>
         <div class="comment-contents">
-            {% if comment.post | trim is not empty %}
-                {{ comment.post | markdown_user_written }}
-            {% else %}
-                <small>Null comment</small>
-            {% endif %}
+            <p>
+                {% if comment.post | trim is not empty %}
+                    {{ comment.post | markdown_user_written }}
+                {% else %}
+                    <small>Null comment</small>
+                {% endif %}
+            </p>
 
             {% if comment.id and is_user_logged_in %}
             <a class="reply-button" data-comment-id="{{ comment.id }}">Reply</a>
             <div class="reply-form" id="reply-form-{{ comment.id }}" style="display: none;">
-                <textarea class="form-submit-wide" id="reply_contents_{{ comment.id }}" maxlength="1000"></textarea>
-                <button class="button button-secondary submit-reply-button" data-comment-id="{{ comment.id }}">Submit Reply</button>
+                <textarea class="form-submit-wide" id="reply_contents_{{ comment.id }}" maxlength="1000" placeholder="Write your reply" rows="4"></textarea>
+                <button class="button button-secondary submit-reply-button" data-comment-id="{{ comment.id }}">Reply</button>
             </div>
             {% endif %}
 
