--- a/private/skins/biscuit/templates/components/test/header.twig
+++ b/private/skins/biscuit/templates/components/test/header.twig
@@ -8,4 +8,10 @@
     {% for link in header_user_links() %}
         <a href="{{ link.url }}">{{ link.name }}</a>
     {% endfor %}
+    <br>
+    {% if is_user_logged_in %}
+        {% for link in header_user_account_links() %}
+            <a href="/login/{{ link.username }}">Login as {{ link.username }}</a>
+        {% endfor %}
+    {% endif %}
 </div>
