--- a/private/skins/biscuit/templates/design_test.twig
+++ b/private/skins/biscuit/templates/design_test.twig
@@ -14,4 +14,6 @@
     {% for color in color_types %}
         <div class="button button-{{ color }}">{{ color }} button!</div>
     {% endfor %}
+    <!-- not an actual color -->
+    <div class="button button-get-started">get started button!</div>
 {% endblock %}
