--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -32,6 +32,11 @@
         .jumbotron.profile-banner {
             background-image: url('{{ banner_picture }}');
         }
+        {#
+        body {
+            background: #323232;
+        }
+        #}
     </style>
 {% endblock %}
 
@@ -40,137 +45,128 @@
     <div class="profile-intro">
         <div class="page">
             <div class="page-contents">
-                <div class="profile-box">
-                    <div class="profile-box-pfp">
-                        <img src="{{ profile_picture }}" class="pfp" alt="{{ data.username }}">
-                    </div>
-                    <div class="profile-box-info">
-                        <div class="profile-box-username">
-                            {{ data.displayname }}
-                            {% if data.is_fedi %}
-                                <img class="profile-box-instance-icon" src="https://{{ data.instance }}/favicon.png">
-                            {% endif %}
-                        </div>
-                        <div class="profile-box-displayname">
-                            @{{ data.username }}
-                            {% if not data.is_fedi %}
-                                | Joined {{ data.joined | relative_time }} |
-                                <span id="follower_count">{{ data.followers }}</span> followers
-                            {% endif %}
-                            {% if data.old_usernames %}
-                                <br>Old usernames:
-                                {% for old_username in data.old_usernames %}
-                                    {{ old_username.old_name }}{{ not loop.last ? ',' }}
-                                {% endfor %}
-                            {% endif %}
-                        </div>
-                    </div>
-                    {% if not data.is_fedi %}
-                        <div class="profile-box-follow">
-                            {% if not data.is_current %}
-                                <button class="button button-secondary" id="follow-user">
-                                    {% if data.following %}
-                                        Unfollow
-                                    {% else %}
-                                        Follow
-                                    {% endif %}
-                                </button>
-                            {% endif %}
-                        </div>
-                    {% endif %}
-                </div>
             </div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
-    {% if data.is_fedi %}
-        <div class="banner banner-danger">
-            This is a fediverse profile, please keep in mind that functionality may not be complete.
-        </div>
-    {% endif %}
-    <div class="section">
-        <div class="section-title">
-            <h1>Profile</h1>
-            {% if data.is_current %}
-                <a href="/settings">Edit</a>
-            {% endif %}
-        </div>
-    </div>
     <div class="content-box">
-        {% if data.about | trim is not empty %}
-            <div class="section">
-                <div class="section-title">
-                    <h2>About me</h2>
+        <div class="profile-box">
+            <div class="profile-box-pfp">
+                <img src="{{ profile_picture }}" class="pfp" alt="{{ data.username }}">
+            </div>
+            <div class="profile-box-info">
+                <div class="profile-box-username">
+                    <span style="color:{{ data.color }}">{{ data.displayname }}</span>
+                    {% if data.is_fedi %}
+                        <img class="profile-box-instance-icon" src="https://{{ data.instance }}/favicon.png">
+                    {% endif %}
+                </div>
+                <div class="profile-box-handle">
+                    @{{ data.username }}
+                </div>
+                <div class="profile-box-details">
+                    {% if data.about | trim is not empty %}
+                        {{ data.about | markdown_user_written }}
+                    {% endif %}
+                    {#
+                    {% if not data.is_fedi %}
+                        | Joined {{ data.joined | relative_time }} |
+                        <span id="follower_count">{{ data.followers }}</span> followers
+                    {% endif %}
+                    {% if data.old_usernames %}
+                        <br>Old usernames:
+                        {% for old_username in data.old_usernames %}
+                            {{ old_username.old_name }}{{ not loop.last ? ',' }}
+                        {% endfor %}
+                    {% endif %}
+                    #}
                 </div>
             </div>
-            {{ data.about | markdown_user_written }}
-        {% endif %}
-        <hr>
-        <div class="grid">
-            <div class="col-small-12 col-medium-6">
-                {% if data.featured_submission %}
-                    <div class="text-title">Featured Upload</div>
-                    <div class="profile-featured-submission">
-                        <a href="/view/{{ data.featured_submission.id }}">
-                            <img src="{{ thumbnail(data.featured_submission.id, data.featured_submission.type, data.featured_submission.bools.custom_thumbnail) }}"
-                                 alt="{{ data.featured_submission.title }}" class="thumbnail">
+            {% if not data.is_fedi %}
+                <div class="profile-box-follow">
+                    {% if not data.is_current %}
+                        <button class="button button-secondary" id="follow-user">
+                            {% if data.following %}
+                                Unfollow
+                            {% else %}
+                                Follow
+                            {% endif %}
+                        </button>
+                    {% else %}
+                        <a class="button button-primary" href="/settings">
+                            Edit
                         </a>
-                        <div class="profile-featured-submission-title">
-                            <a href="/view/{{ data.featured_submission.id }}">{{ data.featured_submission.title }}</a>
-                        </div>
-                    </div>
-                {% endif %}
-            </div>
-            <div class="col-small-12 col-medium-6">
-                {% if data.journals %}
-                    <div class="text-title">Journals</div>
-                    {% for journal in data.journals %}
-                        <div>
-                            <div class="journal-entry">
-                                <div class="journal-title">
-                                    <a href="/read?j={{ journal.id }}">
-                                        {{ journal.title|u.truncate(100, '...') }}
-                                    </a>
-                                </div>
-                                <div class="journal-contents">
-                                    {{ journal.contents|u.truncate(250, '...') }}
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            </div>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
     </div>
-    <br>
-    {% if data.submissions %}
-        <div class="section">
-            <div class="section-title">
-                <h1>Recent Uploads</h1>
-                <a href="/browse?user={{ data.username }}">More</a>
-            </div>
-            <div class="content-box">
-                {% for submission in data.submissions %}
-                    {{ include('/components/_index_submission.twig') }}
-                {% endfor %}
-            </div>
+    <div class="content-box no-border-top">
+        <div class="tabs">
+            {# spaceless removes html whitespace causes unnecessary margins #}
+            {% apply spaceless %}
+                {% if data.submissions %}
+                    <button class="tablink" data-tab="tab_uploads">Uploads</button>
+                {% endif %}
+                {% if data.journals %}
+                    <button class="tablink" data-tab="tab_posts">Journals</button>
+                {% endif %}
+                <button class="tablink" data-tab="tab_comments">Comments</button>
+            {% endapply %}
         </div>
-    {% endif %}
-    <br>
-    <div class="section">
-        <div class="section-title">
-            <h2>Comments</h2>
-        </div>
-        <div class="content-box">
-            {% if is_user_logged_in %}
-                {{ include('/components/_comment_input.twig') }}
+
+        <div id="tab_uploads" class="tabcontent">
+            {% if data.submissions %}
+                <div class="section">
+                    <div class="content-box no-border-top">
+                        {% for submission in data.submissions %}
+                            {{ include('/components/_index_submission.twig') }}
+                        {% endfor %}
+                        <div class="content-entry">
+                            <a href="/browse?user={{ data.username }}">Browse more</a>
+                        </div>
+                    </div>
+                </div>
             {% endif %}
-            <div id="new-comments-here"></div>
-            {% for comment in data.comments %}
-                {{ include('/components/_comment.twig') }}
-            {% endfor %}
+        </div>
+
+        <div id="tab_posts" class="tabcontent">
+            <div class="section">
+                <div class="content-box no-border-top">
+                    {% if data.journals %}
+                        {% for journal in data.journals %}
+                            <div>
+                                <div class="journal-entry">
+                                    <div class="journal-title">
+                                        <a href="/read?j={{ journal.id }}">
+                                            {{ journal.title|u.truncate(100, '...') }}
+                                        </a>
+                                    </div>
+                                    <div class="journal-contents">
+                                        {{ journal.contents|u.truncate(250, '...') }}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+        <div id="tab_comments" class="tabcontent">
+            <div class="section">
+                <div class="content-box no-border-top">
+                    {% if is_user_logged_in %}
+                        {{ include('/components/_comment_input.twig') }}
+                    {% endif %}
+                    <div id="new-comments-here"></div>
+                    {% for comment in data.comments %}
+                        {{ include('/components/_comment.twig') }}
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
