--- a/scss/biscuit/test.scss
+++ b/scss/biscuit/test.scss
@@ -34,3 +34,22 @@
     border: 1px solid $value;
   }
 }
+
+.thumbnail {
+  width: 100%;
+  height: 100%;
+}
+
+.content-entry {
+  display: flex;
+  gap: 10px;
+
+  .content-thumbnail {
+    width: 90px;
+    height: 90px;
+  }
+
+  .content-info {
+    width: 100%;
+  }
+}
