--- a/private/skins/bootstrap/templates/version.twig
+++ b/private/skins/bootstrap/templates/version.twig
@@ -9,7 +9,7 @@
     <div class="card">
         <div class="card-body">
             <p>
-                This website is powered by OpenSB (Open SquareBracket). © 2021-{{ 'now' | date('Y') }}
+                This website is powered by OpenSB. © 2021-{{ 'now' | date('Y') }}
                 {% for developer in data.developers %}
                     {{ developer }}{{ not loop.last ? ',' }}
                 {% endfor %} and others.
