--- a/private/skins/finalium/templates/version.twig
+++ b/private/skins/finalium/templates/version.twig
@@ -8,7 +8,7 @@
     </div>
     <div class="card card-body">
         <p>
-            This website is powered by OpenSB (Open SquareBracket). © 2021-{{ 'now' | date('Y') }}
+            This website is powered by OpenSB. © 2021-{{ 'now' | date('Y') }}
             {% for developer in data.developers %}
                 {{ developer }}{{ not loop.last ? ',' }}
             {% endfor %} and others.
